# kuu.mbt

./: .editorconfig  .gitignore  HANDOFF.md  README-ja.md  README-kuu-cli.md  README-v2.md  README.md  TASK.md  bridge.go  docker.go  justfile  kuu_bridge.mjs  main.go  moon.mod  moon.mod.json  scenarios.go  schema.go
_coverage/: index.html
docs/: DESIGN-internals.md  DESIGN-ja.md  DESIGN-roadmap.md  DESIGN-v1.md  DESIGN-v2.md  DESIGN.md  ROADMAP.md  cli-parser-initial.md  implementation-decisions.md  js-wasm-integration.md  kuu-showcase.md  moonbit-overview.md  phase4-design.md  poc-requirements-analysis.md  shimux-analysis.md  tui-cli-survey.md  tui-mbt-patterns.md  utf8-experiment.md  valcell-lifecycle.md
examples/archives/20260309-cargo-python/: justfile  pyproject.toml
examples/archives/20260309-cargo-python/docs/: DESIGN.md
examples/archives/20260309-cargo-python/docs/decision-records/: DR-001-python-wasm-bridge-strategy.md
examples/archives/20260309-cargo-python/src/: kuu.py
poc/: complete.mbt  eval.mbt  fixture_runner_wbtest.mbt  helpers_wbtest.mbt  installer.mbt  json_conformance_wbtest.mbt  lower_runner_wbtest.mbt  matcher.mbt  moon.mod  moon.pkg  node.mbt  phase10_wbtest.mbt  phase11_wbtest.mbt  phase12_wbtest.mbt  phase13_wbtest.mbt  phase14_wbtest.mbt  phase15_wbtest.mbt  phase16_wbtest.mbt  phase17_wbtest.mbt  phase18_wbtest.mbt  phase19_wbtest.mbt  phase1_wbtest.mbt  phase20_wbtest.mbt  phase21_wbtest.mbt  phase22_wbtest.mbt  phase23_wbtest.mbt  phase24_wbtest.mbt  phase25_wbtest.mbt  phase26_wbtest.mbt  phase27_wbtest.mbt  phase28_wbtest.mbt  (+11 more)
(+1091 files in other folders)
